added reset Game feature

--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
                <span id="9"></span>
            </div>
         </div>
-        
+        <div class="reset">
+            <button id="resetButton">Reset</button>
+        </div>
     </div>
     
 </body>
